# gdiv_calculator

./: CMakeLists.txt  LICENSE  README.md  compile_gdiv.py
example_raster/: T5FPCF.tiff
include/: gdiv_toolbox.h
include/gdiv/runner/: gdal_io.h  runner.h  tiler.h
src/: export.h  gdiv_lsi.cpp  gdiv_lsi.h  gdiv_toolbox.cpp  gdiv_utils.cpp  gdiv_utils.h  msr.cpp  shdi.cpp
src/runner/: gdal_io.cpp  runner.cpp  tiler.cpp
tests/: test_basic.cpp
